--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="bluetoothadress"
+    id="cordova-plugin-bluetoothadress"
     version="1.0.0">
     <name>Cordova Plugin Template</name>
     <description></description>
